# jpc

./: .gitattributes  .gitignore  .htaccess  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: build_docs.yml  release.yml  tests.yml
FAQs/: index.html
_static/: custom_css.css
advanced_usage/: index.html
api/Analytical tools/: index.html
api/Continuous-time Inference/: index.html
api/Discrete updates/: index.html
api/Energy functions/: index.html
api/Gradients/: index.html
api/Inference/: index.html
api/Initialisation/: index.html
api/Testing/: index.html
api/Theoretical tools/: index.html
api/Training/: index.html
api/Updates/: index.html
api/Utils/: index.html
basic_usage/: index.html
docs/: .htaccess  advanced_usage.md  basic_usage.md  index.md  requirements.txt
docs/_static/: custom_css.css
docs/api/: Analytical tools.md  Continuous Inference.md  Continuous-time Inference.md  Discrete updates.md  Energy functions.md  Gradients.md  Inference.md  Initialisation.md  Testing.md  Theoretical tools.md  Training.md  Updates.md  Utils.md  compute_pc_param_grads.md  get_fc_network.md  make_mlp.md  pc_energy_fn.md  solve_pc_activities.md
examples/: bidirectional_pc.ipynb  discriminative_pc.ipynb  epc.ipynb  generative_pc.ipynb  hybrid_pc.ipynb  jpc_from_scratch.ipynb  linear_net_theoretical_activities.ipynb  linear_net_theoretical_energy.ipynb  mupc.ipynb  supervised_generative_pc.ipynb  theoretical_energy_with_linear_net.ipynb  unsupervised_generative_pc.ipynb
examples/bidirectional_pc/: index.html
examples/discriminative_pc/: index.html
examples/epc/: index.html
examples/hybrid_pc/: index.html
examples/jpc_from_scratch/: index.html
examples/linear_net_theoretical_energy/: index.html
examples/mupc/: index.html
examples/supervised_generative_pc/: index.html
examples/unsupervised_generative_pc/: index.html
experiments/: datasets.py  plot_mlp_results.ipynb  theory_energies.py  train_mlp.py  utils.py
experiments/bpc/: README.md  analyse_activity_hessian.py  plot_results.ipynb  plotting.py  requirements.txt  train_pcn.py  utils.py
experiments/bss/: README.md  plot_bss_results.py  requirements.txt
experiments/dmft/: README.md  test_equilib_energy.py
experiments/library_paper/: plotting.py  test_theory_energies.py  theory_energies.py  train_mlp.py  utils.py
experiments/limits_paper/: README.md  plot_gamma0_sweep.py  plot_infer_convergence.py  plot_main_results.py  plot_nonlinear_results.py  plot_saddle_regime.py  plot_toy_results.py  plot_width_vs_depth_results.py  plotting.py  requirements.txt  theory_utils.py  train.py  utils.py
experiments/limits_paper/cnn/: config.py  model.py  optim.py  plot_theory_results.py  test_theory.py  theory_utils.py  utils.py
experiments/limits_paper/transformer/: model.py  train.py
experiments/limits_paper/transformers/: optim.py  plot_results.py  utils.py
experiments/mupc_paper/: README.md  analyse_activity_hessian.py  plot_results.ipynb  plotting.py  requirements.txt  test_energy_theory.py  test_mlp_fwd_pass.py  toy_experiments.ipynb  train_bpn.py  train_pcn.py  train_pcn_no_metrics.py  utils.py
experiments/pdm/: requirements.txt  train_bss.py
jpc/: __init__.py  _energies.py  _grads.py  _infer.py  _init.py  _test.py  _train.py  _utils.py
jpc/_core/: __init__.py  _analytical.py  _energies.py  _errors.py  _grads.py  _infer.py  _init.py  _updates.py
jpc/_core/experimental/: __init__.py  utils.py
jpc/core/: __init__.py  _init.py
search/: search_index.json
tests/: README.md  __init__.py  conftest.py  test_analytical.py  test_energies.py  test_errors.py  test_grads.py  test_infer.py  test_init.py  test_test_functions.py  test_train.py  test_updates.py  test_utils.py
