[project]
name = "jpc"
version = "0.0.1"
description = "Predictive coding networks in JAX."
readme = "README.md"
requires-python ="~=3.8"
#license = {file = "LICENSE"}
authors = [
  {name = "Francesco Innocenti", email = "F.Innocenti@sussex.ac.uk"},
]
keywords = [
    "jax",
    "predictive-coding",
    "neural-networks",
    "hybrid-predictive-coding",
    "deep-learning",
    "bayesian-inference",
    "local-learning",
    "inference-learning"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
]
urls = {repository = "https://github.com/thebuckleylab/jpc"}
dependencies = [
    "jax>=0.4.13",
    "equinox>=0.10.4",
    "diffrax>=0.3.1",
    "jaxtyping>=0.2.19"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["jpc/*"]

[tool.ruff]
extend-include = ["*.ipynb"]
src = []

[tool.ruff.lint]
fixable = ["I001", "F401"]
ignore = ["E402", "E721", "E731", "E741", "F722"]
ignore-init-module-imports = true
select = ["E", "F", "I001"]

[tool.ruff.lint.isort]
combine-as-imports = true
extra-standard-library = ["typing_extensions"]
lines-after-imports = 2
order-by-type = false