[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {name = "Francesco Innocenti", email = "F.Innocenti@sussex.ac.uk"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "jax>=0.4.38",
    "equinox>=0.11.2",
    "diffrax>=0.6.0",
    "optax>=0.2.4",
    "jaxtyping>=0.2.24"
]
description = "Flexible Inference for Predictive Coding Networks in JAX."
keywords = [
    "jax",
    "predictive-coding",
    "neural-networks",
    "hybrid-predictive-coding",
    "deep-learning",
    "local-learning",
    "inference-learning",
    "mupc"
]
license = {file = "LICENSE"}
name = "jpc"
readme = "README.md"
requires-python ="~=3.10"
urls = {repository = "https://github.com/thebuckleylab/jpc"}
version = "1.0.0"

[project.optional-dependencies]
docs = [
  "hippogriffe==0.2.1",
  "griffe==1.7.3",
  "mkdocs==1.6.1",
  "mkdocs-include-exclude-files==0.1.0",
  "mkdocs-ipynb==0.1.1",
  "mkdocs-material==9.6.7",
  "mkdocstrings[python]==0.28.3",
  "pymdown-extensions==10.14.3"
]

[tool.hatch.build]
include = ["jpc/*"]

[tool.ruff]
extend-include = ["*.ipynb"]
src = []

[tool.ruff.lint]
fixable = ["I001", "F401"]
ignore = ["E402", "E721", "E731", "E741", "F722"]
ignore-init-module-imports = true
select = ["E", "F", "I001"]

[tool.ruff.lint.isort]
combine-as-imports = true
extra-standard-library = ["typing_extensions"]
lines-after-imports = 2
order-by-type = false